# rmf-web

./: .dockerignore  .eslintrc.js  .gitignore  .gitmodules  .npmrc  .prettierignore  .prettierrc  .prettierrc.yml  .pylintrc  CMakeLists.txt  CODE_OF_CONDUCT.md  Pipfile  README.md  codecov.yml  eslint.config.js  eslint.config.mjs  lerna.json  nginx.conf  nightwatch.conf.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-lock.yaml.bak  pnpm-workspace.yaml  pyproject.toml  soss.yaml  trajectories.json  tsconfig.json  wdio.conf.js
.github/: dependabot.yml  pull_request_template.md
docker/: Dockerfile  docker-compose.yml  e2e.Dockerfile  soss.Dockerfile
e2e/: auth-ready.ts  dev-env.sh  env.js  env.sh  generate-certs.sh  keycloak.pub  prepare.js  rmf-launcher.ts  serve.json  soss.crt  soss.yaml  soss.yaml.in  startBackend.ts  trampoline.js
e2e-test/: soss.key
example-deployment/: .gitignore  README.md  bash-functions.sh  build-builder.sh  build-rmf-server.sh  cleanup.sh  deploy.sh  get-icons-locally.sh  get-icons.sh  jobs.sh  jwt-pub-key.pub  keycloak-startup-script.cli  keycloak.pem  kustomize-env.sh  reporting_server_config.py  rmf_server_config.py  run-reporting-sever-migrations.sh  start-minikube.sh  stop-minikube.sh
patches/: @react-three__fiber.patch
pipenv-install/: README.md  bootstrap-pipenv.sh  package.json  pipenv
poetry-install/: README.md  package.json
public/: index.html
scripts/: add.js  bootstrap-keycloak.bash  bootstrap.js  bootstrap.sh  build-colconws.sh  build-deps.sh  current-package.js  dockert  dockert.sh  generate-pylintrc.js  (+17 more)
(+495 files in other folders)
