[tool.poetry]
name = "rmf-web"
version = "0.0.1"
description = "RMF web dashboard and other related components"
authors = ["Teo Koon Peng <koonpeng@openrobotics.org>"]
repository = "https://github.com/open-rmf/rmf-web.git"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "22.6.0"
isort = "5.8"
pylint = "2.10.2"
coverage = "5.5"
rmf-api-server = {path = "packages/api-server", develop = true}
ros-translator = {path = "packages/ros-translator", develop = true}

requests = "^2.28.1" # api-server
websocket-client = "^1.3.3" # api-server

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
